# Auria

./: Cargo.toml  README.md  Taskfile.yml  go.mod  go.sum  main.go
frontend/: package-lock.json  package.json
src/: main.rs
src/player/: mod.rs  player.rs  search.rs
