[package]
name = "auria"
version = "0.1.0"
edition = "2024"

[dependencies]
rodio = "0.21.1"
anyhow = "1.0"
sha2 = "0.10"
dirs = "6.0.0"
eframe = {version = "0.33.3", features = ["wayland", "persistence"]}
egui = "0.33.3"
catppuccin-egui = { version = "5.7.0", default-features = false, features = ["egui33"] }
egui-notify = "0.21.0"
tokio = { version = "1.48.0", features = ["full"] }
egui-shadcn = { git = "https://github.com/FerrisMind/shadcn-rs", package = "egui-shadcn" }


[profile.release]
opt-level = "z"     # Optimizar por tamaño
lto = true          # Link-time optimization
codegen-units = 1   # Mejor optimización
strip = true        # Quitar símbolos automáticamente
panic = "abort"     # Reducir overhead de panic
